syntax = "proto3";

import "scalapb/scalapb.proto";
//import "google/protobuf/timestamp.proto";
import "UserEntity.proto";

package c.user.api.proto;

option (scalapb.options) = {
  package_name: "c.user.api.proto"
//  import: "c.user.api.proto._"
  flat_package: true
};

//option java_multiple_files = true;
//option java_package = "c.user.api.proto";

//message Address {
//    string street = 1;
//    string number = 2;
//    string zip = 3;
//    string city = 4;
//    string state = 5;
//    string country = 6;
//}
//
//message User {
//    string id = 1;
//    string username = 2;
//    string email = 3;
//    string pass = 4;
//    Address address = 5;
//}


message RegisterUserReq {
    string username = 1;
    string email = 2;
    string pass = 3;
    c.user.domain.proto.Address address = 4;
}

message RegisterUserRes {
    string id = 1;
}

message UpdatePasswordReq {
    string id = 1;
    string pass = 2;
}

message UpdateAddressReq {
    string id = 1;
    c.user.domain.proto.Address address = 2;
}


message UpdateEmailReq {
    string id = 1;
    string email = 2;
}

message GetUserReq {
    string id = 1;
}

message GetUserRes {
    c.user.domain.proto.User user = 1;
}

message GetUsersReq {
}

message GetUsersRes {
    repeated c.user.domain.proto.User users = 1;
}

service UserApiService {
//    rpc NewSession (stream Req) returns (stream Rsp) {}

    rpc RegisterUser (RegisterUserReq) returns (RegisterUserRes) {}

    rpc GetUser (GetUserReq) returns (GetUserRes) {}

    rpc GetUsers (GetUsersReq) returns (GetUsersRes) {}
}
